# coralizer-cli

./: .gitignore  .gitmodules  README.md  pyproject.toml
coral_cli/: README.md  __init__.py  cli.py  interface_agent.py  prompts.py
coral_cli/coralizer/: github_coralizer.py  idea.md  mcp_coralizer.py
coral_cli/dockerfiles/: coral-server.Dockerfile
coral_cli/templates/: __init__.py
coral_cli/templates/python/camel/: README.md  requirements.txt
coral_cli/templates/python/langgraph/: README.md  agent.py
